<resources>
    <string name="app_name">GV-App</string>
    <string name="action_settings">Settings</string>
    <string name="neuigkeiten">Neuigkeiten</string>
    <string name="gesundheit">Gesundheit</string>
    <string name="aerzteverzeichnis">Ärzteverzeichnis</string>
    <string name="aerztefinder">Ärztefinder</string>
    <string name="ernaehrung">Ernährung</string>
    <string name="restaurantsuche">Restaurantsuche</string>
    <string name="restaurantfinder">Restaurantfinder</string>
    <string name="rezepte">Rezepte</string>
    <string name="diaeten">Diäten</string>
    <string name="trinkerinnerung">Trinkerinnerung</string>
    <string name="bmirechner">BMI-Rechner</string>
    <string name="kfarechner">KFA-Rechner</string>
    <string name="sport">Sport</string>
    <string name="uebungen">Übungen</string>
    <string name="trainingsplaene">Trainingspläne</string>
    <string name="sportstaettensuche">Sportstättensuche</string>
    <string name="schrittzaehler">Schrittzähler</string>
    <string name="wettbewerb">Wettbewerb</string>
    <string name="bestenliste">Bestenliste</string>
    <string name="notruf">Notruf</string>
    <string name="notrufe">Notrufe</string>
    <string name="aerzte">Ärzte</string>
    <string name="restaurants">Restaurants</string>
    <string name="sportstaetten">Sportstätten</string>
    <string name="feuerwehr">Feuerwehr</string>
    <string name="polizei">Polizei</string>
    <string name="rettung">Rettung</string>
    <string name="euronotruf">Euronotruf</string>
    <string name="bergrettung">Bergrettung</string>
    <string name="notruffuergehoerlose">Notruf für Gehörlose</string>
    <string name="aerztefunkdienst">Ärztefunkdienst</string>
    <string name="orfkinderservice">ORF-Kinderservice (Rat auf Draht)</string>
    <string name="aerzteflugambulanz">Ärzteflugambulanz</string>
    <string name="frauenhelpline">Frauenhelpline</string>
    <string name="frauennotruf">Frauennotruf</string>
    <string name="telefonseelsorge">Telefonseelsorge</string>
    <string name="gasgebrechen">Gasgebrechen</string>
    <string name="arboe">ARBÖ</string>
    <string name="oeamtc">ÖAMTC</string>
    <string name="kinderundjugendanwaltdesbundes">Kinder- und Jugendanwalt des Bundes</string>
    <string name="vergiftungsinformation">Vergiftungsinformation</string>
    <string name="servicenummerderpolizei">Servicenummer der Polizei</string>
    <string name="hotlinefuervermisstekinder">Hotline für vermisste Kinder</string>
    <string name="gewicht">Gewicht (kg):</string>
    <string name="groesse">Größe (cm):</string>
    <string name="alter">Alter (Jahre):</string>
    <string name="ihrbmi">Ihr BMI:</string>
    <string name="trizezps">Trizeps (mm):</string>
    <string name="bauchfalte">Bauchfalte (mm):</string>
    <string name="hueftfalte">Hüftfalte (mm):</string>
    <string name="brustfalte">Brustfalte (mm):</string>
    <string name="oberschenkelfalte">Oberschenkelfalte (mm):</string>
    <string name="koerprefettanteil">Körperfettanteil:</string>
    <string name="geschlecht">Geschlecht:</string>
    <string name="maennlich">Männlich</string>
    <string name="weiblich">Weiblich</string>
    <string name="keininternet">Keine Internetverbindung vorhanden.</string>
    <string name="nochmalversuchen">Nochmal versuchen.</string>
    <string name="title_activity_rezepte_detail_ansicht">RezepteDetailAnsichtActivity</string>
    <string name="anzahlprotionen">Anzahl Portionen:</string>
    <string name="kochdauer">Kochdauer:</string>
    <string name="schwierigkeitsgrad">Schwierigkeitsgrad:</string>
    <string name="zutaten">Zutaten:</string>
    <string name="zubereitung">Zubereitung:</string>
    <string name="schritt">Schritt</string>
    <string name="tipp">Tipp:</string>
    <string name="sportstaettenfinder">Sportstaettenfinder</string>
    <string name="title_activity_aerzte_detail">AerzteDetailActivity</string>
    <string name="oeffnungszeiten">Öffnungszeiten</string>
    <string name="diplome">Diplome</string>
    <string name="krankenkassen">Krankenkassen</string>
    <string name="fremdsprachen">Fremdsprachen</string>
    <string name="informationen">Informationen</string>
    <string name="weitereinformationen">Weitere Informationen</string>
    <string name="title_activity_diaeten_detail">DiaetenDetailActivity</string>
    <string name="info">Info</string>
    <string name="erklaerung">Erklärung</string>
    <string name="vorteile">Vorteile</string>
    <string name="nachteile">Nachteile</string>
    <string name="fazit">Fazit</string>
    <string name="title_activity_neuigkeiten_detail">NeuigkeitenDetailActivity</string>
    <string name="title_activity_sportstaetten_detail">SportstaettenDetailActivity</string>
    <string name="kategorie">Kategorie</string>
    <string name="bewertung">Bewertung</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fortschritt">Fortschritt</string>
    <string name="title_activity_trinkerinnerug_setting">Einstellungen Trinkerinnerung</string>
    <string name="taeglicheMenge">Tägliche Menge in l (3l empfohlen):</string>
    <string name="glasgroesse">Glasgröße eingeben in ml (Durchschnitt 250 ml):</string>
    <string name="ruhezeiten">Ruhezeiten</string>
    <string name="von">Von </string>
    <string name="bis">bis</string>
    <string name="fehleruhrzeit">Die Anfangszeit muss vor der Endzeit liegen.</string>
    <string name="title_activity_uebungs_detail">UebungsDetailActivity</string>
    <string name="muskelgruppe">Muskelgruppe</string>
    <string name="beschreibung">Beschreibung</string>
</resources>
