<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tvFalte1Identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/trizezps"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFalte1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbFalte1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:paddingTop="20dp"
        android:progress="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tvFalte2Identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/bauchfalte"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFalte2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbFalte2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:paddingTop="20dp"
        android:progress="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/tvFalte3Identifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/hueftfalte"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFalte3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbFalte3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:paddingTop="20dp"
        android:progress="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/alter"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAlter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbAlter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:paddingTop="20dp"
        android:progress="30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/geschlecht"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbWeiblich"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <RadioButton
            android:id="@+id/rbWeiblich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/weiblich"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbMaennlich"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maennlich"
            android:textSize="20sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/koerprefettanteil"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvKfa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13.7"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
