<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/gewicht"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvGewicht"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbGewicht"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:paddingTop="30dp"
        android:progress="20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/groesse"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvGroesse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="160"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbGroesse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:paddingTop="30dp"
        android:progress="40" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/alter"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvAlter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sbAlter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:paddingTop="30dp"
        android:progress="30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:text="@string/ihrbmi"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvBmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="23,4"
            android:textColor="@color/ErnaehrungA200"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
